# easycc

./: .gitignore  CMakeLists.txt  Makefile  README.md  easycc  problem.md  scan.sh  test.c  test.s
.cmake/api/v1/reply/: index-2022-04-23T13-48-11-0294.json
include/: node.h  node.hpp  runtime.h
include/frontend/: parser.h
src/: ast.cpp  main.cpp  node.cpp  runtime.cpp
src/frontend/: parser.cpp  parser.h  parser.hpp  parser.y  token.cpp  token.l
test/: 1.s  4.c  5.s  test.sh
